--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
             <div class="product-list">
                 <div class="product-item" id="product1">
                     <div class="product-content">
-                        <img src="C:\Users\work\Desktop\site\products\cvmet.jpg" alt="Цветной металл">
+                        <img src="products\cvmet.jpg" alt="Цветной металл">
                         <h3>Цветные металлы</h3>
                         <div class="details">
                             <ul>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="product-item" id="product2">
                     <div class="product-content">
-                        <img src="C:\Users\work\Desktop\site\products\st.jpg" alt="Сталь">
+                        <img src="products\st.jpg" alt="Сталь">
                         <h3>Сталь</h3>
                         <div class="details">
                             <ul>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="product-item" id="product3">
                     <div class="product-content">
-                        <img src="C:\Users\work\Desktop\site\products\chug.jpg" alt="Чугун">
+                        <img src="products\chug.jpg" alt="Чугун">
                         <h3>Чугун</h3>
                         <div class="details">
                             <ul>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="product-item" id="product4">
                     <div class="product-content">
-                        <img src="C:\Users\work\Desktop\site\products\metal-swarf.jpg" alt="Сплавы">
+                        <img src="products\metal-swarf.jpg" alt="Сплавы">
                         <h3>Сплавы</h3>
                         <div class="details">
                             <ul>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="product-item" id="product5">
                     <div class="product-content">
-                        <img src="C:\Users\work\Desktop\site\products\redkozem-elements.jpg" alt="Редкоземельные металлы">
+                        <img src="products\redkozem-elements.jpg" alt="Редкоземельные металлы">
                         <h3>Редкоземельные металлы</h3>
                         <div class="details">
                             <ul>
