--- a/products.html
+++ b/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги - Металлургический Завод «Работяга»</title>
+    <title>Продукция - Металлургический Завод «Работяга»</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Металлургический Завод «Работяга»</h1>
@@ -16,78 +18,210 @@
                 <li><a href="products.html">Продукция</a></li>
                 <li><a href="services.html">Услуги</a></li>
                 <li><a href="contact.html">Контакты</a></li>
-                </ul>
+            </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Наши услуги</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <img src="services\fr.jpg" class="card-img-top" alt="Фрезерные работы">
-                    <h3>Фрезерные работы</h3>
-                    <p>Фрезерная обработка представляет собой процесс обработки деталей резанием,
-                         когда фреза совершает вращательное движение,а обрабатываемая заготовка — поступательное.</p>
-                    <p>Обработка металла на фрезерных станках с ЧПУ крайне востребованный вид металлообработки, часто применяемый там, где другие методы не дают должной точности и качества поверхности.</p>
+            <h2>Наша продукция</h2>
+            <div class="product-list">
+                <div class="product-item" id="product1">
+                    <div class="product-content">
+                        <img src="products\cvmet.jpg" alt="Цветной металл">
+                        <h3>Цветные металлы</h3>
+                        <div class="details">
+                            <ul>
+                                <li>Алюминиевый прокат</li>
+                                <li>Титановый прокат</li>
+                                <li>Медный прокат</li>
+                                <li>Шина электротехническая</li>
+                                <li>Свинцовый прокат</li>
+                                <li>Цинковый прокат</li>
+                                <li>Оловянный прокат</li>
+                                <li>Никелевый прокат</li>
+                                <li>Магниевый прокат</li>
+                                <li>Цирконий</li>
+                                <li>Танталовый прокат</li>
+                                <li>Рулоны из цветных металлов</li>
+                                <li>Вольфрам</li>
+                                <li>Молибден</li>
+                                <li>Ниобий</li>
+                                <li>Рений</li>
+                                <li>Гафний</li>
+                                <li>Селен</li>
+                                <li>Теллур</li>
+                                <li>Кадмий</li>
+                                <li>Ванадий</li>
+                                <li>Бронзовый прокат</li>
+                                <li>Латунный прокат</li>
+                                <!-- Добавьте здесь ваши дополнительные детали продукта -->
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-item">
-                    <img src="services\tokarnye_raboty.jpg" class="card-img-top" alt="Токарные работы">
-                    <h3>Токарные работы</h3>
-                    <p>Токарная обработка – механическое изменение формы заготовки. Токарный станок вращает заготовку, а режущий инструмент движется относительно нее.</p>
-                    <p>Мы гарантируем быстрое и качественное срезание металла с заготовки. Это позволяет получить быстро и качественно деталь по вашему заказу с нужной формой и шероховатостью.</p>
+                <div class="product-item" id="product2">
+                    <div class="product-content">
+                        <img src="products\st.jpg" alt="Сталь">
+                        <h3>Сталь</h3>
+                        <div class="details">
+                            <ul>
+                                <li>Лента бандажная</li>
+                                <li>Лента стальная монтажная</li>
+                                <li>Стальная гофрированная лента</li>
+                                <li>Лента стальная термообработанная</li>
+                                <li>Перфорированная стальная лента</li>
+                                <li>Проволока из электротехнической стали</li>
+                                <li>Сетка проволочная</li>
+                                <li>Втулка стальная</li>
+                                <li>Колючая проволока</li>
+                                <li>Арматурная проволока</li>
+                                <li>Шина стальная</li>
+                                <li>Нержавеющая сталь</li>
+                                <li>Оцинкованная сталь</li>
+                                <li>Трубы из стали</li>
+                                <li>Листовая сталь</li>
+                                <li>Стальной трос</li>
+                                <li>Стальные фитинги</li>
+                                <li>Прокат из конструкционных сталей</li>
+                                <li>Инструментальная сталь</li>
+                                <li>Профнастил (профлист)</li>
+                                <li>Двутавровые балки</li>
+                                <li>Стальные профили</li>
+                                <li>Уголок стальной</li>
+                                <li>Уголок стальной гнутый</li>
+                                <li>Стальная полоса</li>
+                                <li>Стальная проволока</li>
+                                <li>Стальная лента</li>
+                                <li>Штрипсы</li>
+                                <li>Стальная плита</li>
+                                <li>Сетки из стали</li>
+                                <li>Прокат с полимерным покрытием</li>
+                                <li>Стальной круг</li>
+                                <li>Стальной пруток</li>
+                                <li>Стальной квадрат</li>
+                                <li>Стальной шестигранник</li>
+                                <li>Стальная пластина</li>
+                                <li>Стальной швеллер</li>
+                                <li>Стальной гнутый швеллер</li>
+                                <li>Стальной двутавр</li>
+                                <li>Калиброванная сталь</li>
+                                <li>Броневая сталь</li>
+                                <li>Судостроительная сталь</li>
+                                <li>Омедненная сталь</li>
+                                <li>Арматура в прутках</li>
+                                <li>Арматура в бухтах</li>
+                                <li>Стальная дробь</li>
+                                <li>Жесть</li>
+                                <li>Стальные мелющие шары</li>
+                                <li>Стальные отливки</li>
+                                <li>Стальной рулон</li>
+                                <li>Стальная поковка</li>
+                                <li>Поковки квадратные</li>
+                                <li>Поковка круглая</li>
+                                <li>Поковка прямоугольная</li>
+                                <li>Стальная катанка</li>
+                                <li>Шпоночный материал</li>
+                                <li>Стальной тавр</li>
+                                <li>Кислотостойкие стали</li>
+                                <li>Стальные штамповки</li>
+                                <li>Центраторы колонн</li>
+                                <li>Печные ролики</li>
+                                <li>Биметаллическая проволока</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-item">
-                    <img src="services\lazernaya_rezka.jpg" class="card-img-top" alt="Лазерная резка">
-                    <h3>Лазерная резка</h3>
-                    <p>Лазерная резка предполагает вырезание из плоского листа металла деталей по требуемому контуру. Лазер режет широкий спектр материалов: чёрная сталь, нержавеющая сталь, алюминий, цветные металлы и другие. Допустимая толщина листа достигает 18 мм. Мы работам как с вашим материалом, так и можем предоставить свой.</p>
-                    <p>Мы готовы выполнить весь комплекс производственных операций от разработки чертежа до покраски готового изделия. Чаще всего после лазерной резки требуется гибка, и мы также готовы вам её предложить. Собственное производство позволяет нам не просто формировать геометрию деталей, а изготавливать законченные изделия, готовые к последующей эксплуатации.</p>
+                <div class="product-item" id="product3">
+                    <div class="product-content">
+                        <img src="products\chug.jpg" alt="Чугун">
+                        <h3>Чугун</h3>
+                        <div class="details">
+                            <ul>
+                                <li>Чугунный пруток</li>
+                                <li>Чушка чугунная</li>
+                                <li>Чугунные фитинги</li>
+                                <li>Чугунные трубы</li>
+                                <li>Чугунная плита</li>
+                                <li>Серый чугун</li>
+                                <li>Чугунный лист</li>
+                                <li>Чугунная дробь</li>
+                                <li>Втулки чугунные</li>
+                                <li>Шкивы</li>
+                                <li>Гидранты пожарные чугунные</li>
+                                <li>Чугунные колосники</li>
+                                <li>Чугунные тигли</li>
+                                <li>Чугунная водосточная воронка</li>
+                                <li>Чугунные люки</li>
+                                <li>Дождеприемники чугунные</li>
+                                <li>Чугунные ливневые решетки</li>
+                                <li>Чугунные консоли</li>
+                                <li>Чугунные тюбинги</li>
+                                <li>Чугунные кольцевые утяжелители</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="service-list">
-                <div class="service-item">
-                    <img src="services\gibka.jpg" class="card-img-top" alt="Гибка металла">
-                    <h3>Гибка металла</h3>
-                    <p>Производство изделий из листового металла считается одной из наиболее востребованных услуг в области металлообработки. Это обуславливается достаточно простым технологическим процессом и невысокой стоимостью конечных изделий.
-                        Мы предлагаем высокоточную гибку металла толщиной до 5 мм и длиной гиба до 1000 мм.</p>
-                        <p>Мы готовы выполнить весь комплекс производственных операций от разработки чертежа до покраски готового изделия. Собственное производство позволяет нам не просто формировать геометрию деталей, а изготавливать законченные изделия, готовые к последующей эксплуатации. </p>
+                <div class="product-item" id="product4">
+                    <div class="product-content">
+                        <img src="products\metal-swarf.jpg" alt="Сплавы">
+                        <h3>Сплавы</h3>
+                        <div class="details">
+                            <ul>
+                                <li>Бронзовый прокат</li>
+                                <li>Латунный прокат</li>
+                                <li>Баббиты</li>
+                                <li>Ферросплавы</li>
+                                <li>Медно-никелевые сплавы</li>
+                                <li>Оловянно-свинцовые сплавы</li>
+                                <li>Прецизионные сплавы</li>
+                                <li>Тугоплавкие сплавы</li>
+                                <li>Вольфрамовые сплавы</li>
+                                <li>Молибденовые сплавы</li>
+                                <li>Сплав Розе</li>
+                                <li>Сплав Вуда</li>
+                                <li>Сплав Деварда</li>
+                                <li>Кремний технический</li>
+                                <li>Свинцово-сурьмянистый сплав</li>
+                                <li>Ниобиевые сплавы</li>
+                                <li>Лигатура</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-item">
-                    <img src="services\porokr.jpg" class="card-img-top" alt="Порошковая окраска">
-                    <h3>Порошковая окраска</h3>
-                    <p>Порошковое окрашивание – процесс получения устойчивого полимерного покрытия. В результате вы получите не только красивое и ровное покрытие, но долговечное и износостойкое.</p>
-                    <p>Кроме того, выбрав окрашивание с использованием технологии порошковой краски вы увеличиваете антикоррозийные и ударопрочные свойства окрашиваемого материала.</p>
-                </div>
-                <div class="service-item">
-                    <img src="services\metinasana.jpg" class="card-img-top" alt="Сварочные работы">
-                    <h3>Сварочные работы</h3>
-                    <p>Сварка позволяет соединить несколько металлических деталей в одно целое. Благодаря сварке, образуется лёгкое, но прочное неразборное соединение. С использованием сварочных работа можно изготовить как габаритные металлоконструкции, так и небольшие изделия со сложной геометрией.</p>
-                    <p>Мы предлагаем услуги сварки различных металлов: сталь, алюминий, нержавеющая сталь и многие другие. В зависимости от типа металла и особенностей конструкции, мы подбираем оптимальную технологию сварки, что позволяет достигнуть аккуратного и равномерного шва. По желанию, возможна зачистка обрабатываемой поверхности.</p>
-                </div>
-            </div>
-            <div class="service-list">
-                <div class="service-item">
-                    <img src="services\galv.jpeg" class="card-img-top" alt="Гальваника">
-                    <h3>Гальваника</h3>
-                    <p>На металл наносится специальное защитное покрытие из тонкого слоя другого металла. Это не только продлевает срок службы изделий, но и улучшает технические характеристики.</p>
-                    <p>Нанесение гальванических покрытий улучшает антикоррозийные свойства. Иногда гальванику применяют в декоративных целях, улучшая внешний вид изделия.</p>
-                </div>
-                <div class="service-item">
-                    <img src="services\dust2.jpg" class="card-img-top" alt="Пескоструйная обработка">
-                    <h3>Пескоструйная обработка</h3>
-                    <p>Абразивный способ обработки поверхностей твердых материалов: струей воздуха абразив подается на поверхность.</p>
-                    <p>Для достижения качества и желаемой или необходимой степени очистки для каждой поверхности индивидуально подбирается абразив и устанавливается давление, в зависимости от исходного состояния обрабатываемой поверхности.</p>
-                </div>
-                <div class="service-item">
-                    <img src="services\elobr.jpg" class="card-img-top" alt="Электроэрозийная обработка">
-                    <h3>Электроэрозийная обработка</h3>
-                    <p>При помощи электроэрозии под действием электрических разрядов, возникающих между заготовкой и электродом-инструментом, происходит изменение поверхности и формы заготовки.</p>
-                    <p>Электроэрозионная обработка позволяет выполнять даже такие сложные операции, как получение внутренних спиральных и криволинейных отверстий, пазов, канавок. Механическими методами достичь этого практически невозможно.</p>
+                <div class="product-item" id="product5">
+                    <div class="product-content">
+                        <img src="products\redkozem-elements.jpg" alt="Редкоземельные металлы">
+                        <h3>Редкоземельные металлы</h3>
+                        <div class="details">
+                            <ul>
+                                <li>Гадолиний</li>
+                                <li>Диспрозий</li>
+                                <li>Европий</li>
+                                <li>Индий</li>
+                                <li>Иттербий</li>
+                                <li>Иттрий</li>
+                                <li>Лантан</li>
+                                <li>Лютеций</li>
+                                <li>Неодим</li>
+                                <li>Празеодим</li>
+                                <li>Самарий</li>
+                                <li>Скандий</li>
+                                <li>Тербий</li>
+                                <li>Тулий</li>
+                                <li>Церий</li>
+                                <li>Урбий</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
     </main>
     <footer>
         <p>&copy; 2024 Металлургический Завод «Работяга». Все права защищены.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
